--- a/2048/manifest.json
+++ b/2048/manifest.json
@@ -8,8 +8,45 @@
   "theme_color": "#f2c500",
   "icons": [
     {
-      "src": "logo.png",
+      "src": "images/logo.png",
       "sizes": "400x400",
+      "type": "image/png"
+    },
+        {
+      "src": "images/logo44x44.scale-200.png",
+      "sizes": "44x44",
+      "type": "image/png"
+    },
+            {
+      "src": "images/logo50x50.scale-200.png",
+      "sizes": "50x50",
+      "type": "image/png"
+    },
+            {
+      "src": "images/logo71x71.scale-200.png",
+      "sizes": "71x71",
+      "type": "image/png"
+    }
+    ,
+      {
+      "src": "images/logo150x150.scale-200.png",
+      "sizes": "150x150",
+      "type": "image/png"
+    }
+    ,
+      {
+      "src": "images/logo310x310.scale-200.png",
+      "sizes": "310x310",
+      "type": "image/png"
+    },
+      {
+      "src": "images/Splash620x300.scale-200.png",
+      "sizes": "620x300",
+      "type": "image/png"
+    },
+      {
+      "src": "images/Wide310x150.scale-200.png",
+      "sizes": "310x150",
       "type": "image/png"
     }
   ]
